# RaspberryPi-LCD

./: CMakeLists.txt  I2C.c  I2C.h  LCD.c  LCD.h  Makefile  README  main.c  test.c
C_I2C/: CMakeLists.txt  I2CDevice.c  I2CDevice.h  I2C_ATMega.c  Macros.h
C_LCDShield/: CMakeLists.txt  LCDShield.c  LCDShield.h
C_Logger/: CMakeLists.txt  ConsoleColor.c  ConsoleColor.h  Logger.c  Logger.h
